?.?.?
  * Fix timeouts longer than 60 seconds
  * RtorrentRPC.get_supported_method() returns first supported method from a
    sequence of candidates


1.0.0
  * QbittorrentRPC.call(): "data" argument has been renamed to "options"


0.1.0
  * Initial release