@@ -2,6 +2,7 @@
   * Fix timeouts longer than 60 seconds
   * RtorrentRPC.get_supported_method() returns first supported method from a
     sequence of candidates
+  * RtorrentRPC.multicall() makes "system.multicall" requests more convenient
 
 
 1.0.0
